# the-builder-path

./: .env.tpl  .gitignore  README.md  pyproject.toml
ch1/cursor_101/exp1_edit_ctrl_k/: what-makes-a-good-cli-tool.srt
ch1/response-format/: README.md  main.py
ch2/: example_joblib.py
ch2/cursor-101/exp1-edit-ctrl_k/: what-makes-a-good-cli-tool.srt
ch2/cursor-101/exp3-auto-import-tab/: main.py
ch2/cursor-agentic/: pyproject.toml
ch2/cursor-agentic/.cursor/rules/: cli.mdc
ch2/cursor_102/: README.md
ch2/cursor_agentic_example/.cursor/: mcp.json
ch2/cursor_mcp_cookbook/.cursor/: mcp.json
ch2/example/: .mise.toml  embedding.py
ch2/mcp-cookbook/.cursor/: mcp.json
ch2/mcp-cookbook/src/time-mcp-server/: README.md
ch2/model-context-protocol/src/time-mcp-server/: README.md  pyproject.toml
ch2/pdf-extractor/: README.md  main.py  pyproject.toml
ch2/pdf-extractor/.cursor/rules/: CLAUDE.mdc
ch2/pdf-extractor/src/: config.py  jina.py  pdf.py  ui.py
ch3/agentic_example/: README.md  agent.py  fastagent.config.yaml
ch3/agentic_example/.cursor/rules/: default.mdc
ch3/agentic_example/src/time-mcp-server/: pyproject.toml
ch3/agentic_example/src/windpy-mcp-server/: Dockerfile  README.md  pyproject.toml  server.py
ch3/modal_comfyui_example/: comfyui.py
ch3/modal_example/: modal-execute-ipynb.py  modal-execute-marimo.py  modal-execute.py  modal.bash  notebook.py
ch3/modal_run_marimo_example/: marimoapp.py
ch3/modal_serve_comfyui_example/: comfyuiapp.py  workflow_api.json
ch3/pocketflow_example/: flow.py  pyproject.toml
ch3/pocketflow_example/docs/: design.md
ch3/pocketflow_example/utils/: call_llm.py
ch3/pocketflow_template/: main.py  nodes.py
ch3/pocketflow_template/.cursor/rules/: pocketflow.mdc
ch3/reader/: main.py  pyproject.toml
ch3/reader-v1/: README.md
ch3/reader-v1/src/: pdf.py
ch3/reader-v2/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
ch3/reader-v2/.cursor/rules/: default.mdc  htmx.mdc
ch3/reader-v2/src/reader/: pdf.py
ch3/reader-v2/static/js/: file-input.js
ch3/reader-v2/tests/: test_key.py
ch3/reader_htmx_example/: pyproject.toml
ch3/reader_htmx_example/src/reader/: config.py
ch3/reader_htmx_example/static/css/: styles.css
ch3/reader_htmx_example/static/js/: clipboard.js
ch3/reader_streamlit_example/: pyproject.toml
ch3/reader_streamlit_example/src/: jina.py
ch3/reader_v1/src/: config.py  ui.py
ch3/reader_v2/: README.md  main.py
