[project]
name = "the-builder-path"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.29.3",
    "modal>=0.73.116",
    "openai>=1.68.2",
    "pyright>=1.1.397",
    "ruff>=0.11.2",
    "streamlit>=1.43.2",
]
