[project]
name = "demo-extractor"
version = "0.1.0"
description = "A tool for extracting information from PDF files and URLs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.5.0",
    "logfire>=3.8.1",
    "pymupdf>=1.25.4",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "st-copy-to-clipboard>=0.1.6",
    "streamlit>=1.43.2",
    "watchdog>=6.0.0",
]

[tool.ruff]
indent-width = 4
line-length = 120
